--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8" />
@@ -28,7 +28,7 @@
             <h3>
               <a class="Proficional_Almoco" target="_blank" href="#services">
                 <!-- SEGUNDA -->
-                27/03
+                03/04
               </a>
             </h3>
             <p>
@@ -85,11 +85,12 @@
               <!-- <li> LASANHA DE CARNE </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
               <!-- <li> ROUPA VELHA </li> -->
-              <li> OVO FRITO </li>
+              <!-- <li> OVO FRITO </li> -->
               <!-- <li> OVO FRITO E CALABRESA</li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
-              <li> PEIXE FRITO </li>
-              <!-- <li> PICADINHO RICO </li> -->
+              <!-- <li> PEIXE FRITO </li> -->
+              <li> PICADINHO RICO </li>
+              <li> PIRARUCU A MILANESA </li>
               <!-- <li> TAMBAQUI FRITO </li> -->
               <!-- <li> ESTROGONOFE DE CARNE </li> -->
               <!-- <li> REFRIGERANTE </li> -->
@@ -110,7 +111,8 @@
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PASTEL </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
-              <li> SALGADO </li>
+              <!-- <li> SALGADO </li> -->
+              <li> PIZZA </li>
               <!-- <li> X SALADA </li> -->
               <!-- <li> AÇAÍ COM FARINHA DE TAPIOCA </li> -->
             </ul>
@@ -124,7 +126,7 @@
             <h3>
               <a class="Proficional_Almoco" target="_blank" href="#services">
                 <!-- TERÇA -->
-                28/03
+                04/04
               </a>
             </h3>
             <p>
@@ -138,10 +140,10 @@
               <!-- <li> FRUTA </li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> OVO COZIDO </li> -->
-              <!-- <li> OVO FRITO </li> -->
+              <li> OVO FRITO </li>
               <!-- <li> PATÊ </li> -->
               <!-- <li> PUPUNHA </li> -->
-              <li> QUARENTÃO </li>
+              <!-- <li> QUARENTÃO </li> -->
               <!-- <li> QUEIJO E PRESUNTO </li> -->
               <!-- <li> SOPA DE FEIJÃO </li> -->
               <!-- <li> TAPIOCA COM QUEIJO </li> -->
@@ -164,8 +166,8 @@
               <!-- <li> FILE DE FRANGO FRITO </li> -->
               <!-- <li> FIGADO ACEBOLADO </li> -->
               <!-- <li> FRANGO A MILANESA </li> -->
-              <!-- <li> FRANGO ASSADO </li> -->
-              <li> FRANGO CROCANTE </li>
+              <li> FRANGO ASSADO </li>
+              <!-- <li> FRANGO CROCANTE </li> -->
               <!-- <li> FRANGO DESFIADO </li> -->
               <!-- <li> FRANGO FRITO </li> -->
               <!-- <li> FRANGO GUISADO </li> -->
@@ -202,10 +204,10 @@
               <!-- <li> KIKÃO </li> -->
               <!-- <li> MISTO QUENTE </li> -->
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
-              <li> PÃO COM QUEIJO QUENTE </li>
+              <!-- <li> PÃO COM QUEIJO QUENTE </li> -->
               <!-- <li> PASTEL </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
-              <!-- <li> SALGADO </li> -->
+              <li> SALGADO </li>
               <!-- <li> MINGAU DE MUNGUNZÁ </li> -->
               <!-- <li> X SALADA </li> -->
             </ul>
@@ -219,7 +221,7 @@
             <h3>
               <a class="Proficional_Almoco" target="_blank" href="#services">
                 <!-- QUARTA -->
-                29/03
+                05/04
               </a>
             </h3>
             <p>
@@ -275,8 +277,8 @@
               <!-- <li> ISCA DE FRANGO </li> -->
               <!-- <li> LASANHA DE CARNE </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
-              <li> LINGUIÇA ASSADA DE FORNO </li>
-              <!-- <li> OVO FRITO </li> -->
+              <!-- <li> LINGUIÇA ASSADA DE FORNO </li> -->
+              <li> OVO FRITO </li>
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> PEIXE FRITO </li> -->
               <!-- <li> PICADINHO RICO </li> -->
@@ -292,6 +294,7 @@
             <p>
             <P class="desjejum">LANCHE:</P>
             <ul>
+              <li> AÇAÍ FARINHA DE TAPIOCA </li>
               <!-- <li> BAQUETE </li> -->
               <!-- <li> BISCOITO </li> -->
               <!-- <li> BISCOITO RECHEADO </li> -->
@@ -303,7 +306,7 @@
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PASTEL </li> -->
               <!-- <li> PIT STOP / IOGURTE </li> -->
-              <li> SALGADO </li>
+              <!-- <li> SALGADO </li> -->
               <!-- <li> MINGAU DE BANANA </li> -->
               <!-- <li> X SALADA </li> -->
               <!-- <li> X BURGUER </li> -->
@@ -319,7 +322,7 @@
             <h3>
               <a class="Proficional_Almoco" target="_blank" href="#services">
                 <!-- QUINTA -->
-                30/03
+                06/04
               </a>
             </h3>
             <p>
@@ -362,13 +365,13 @@
               <!-- <li> FEIJOADA </li> -->
               <!-- <li> FILE DE FRANGO FRITO </li> -->
               <!-- <li> FRANGO A MILANESA </li> -->
-              <li> FRANGO ASSADO </li>
+              <!-- <li> FRANGO ASSADO </li> -->
               <!-- <li> FRANGO DESFIADO </li> -->
               <!-- <li> FRANGO FRITO </li> -->
-              <!-- <li> FRANGO GUISADO </li> -->
+              <li> FRANGO GUISADO </li>
               <!-- <li> GUISADO DE CARNE </li> -->
               <!-- <li> GUISADINHO SUÍNO </li> -->
-              <li> HAMBURGER </li>
+              <!-- <li> HAMBURGER </li> -->
               <!-- <li> ISCA DE CALABRESA </li> -->
               <!-- <li> ISCA DE CARNE </li> -->
               <!-- <li> ISCA DE FIGADO </li> -->
@@ -380,6 +383,7 @@
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> PEIXE FRITO </li> -->
               <!-- <li> PEITO DE FRANGO </li> -->
+              <li> PIRARUCU DESFIADO </li>
               <!-- <li> PICADINHO RICO </li> -->
               <!-- <li> REFRIGERANTE </li> -->
               <!-- <li> TAMBAQUI FRITO </li> -->
@@ -394,13 +398,13 @@
             <P class="desjejum">LANCHE:</P>
             <ul>
               <!-- <li> AÇAÍ COM FARINHA DE TAPIOCA </li> -->
-              <!-- <li> BAQUETE </li> -->
+              <li> BAQUETE </li>
               <!-- <li> BISCOITO </li> -->
               <!-- <li> BISCOITO RECHEADO </li> -->
               <!-- <li> BOLACHA / IOGURTE </li> -->
               <!-- <li> BOLO </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
-              <li> KIKÃO </li>
+              <!-- <li> KIKÃO </li> -->
               <!-- <li> MISTO QUENTE </li> -->
               <!-- <li> MINGAU DE MILHO </li> -->
               <!-- <li> MINGAU DE MUNGUNZÁ </li> -->
@@ -422,7 +426,7 @@
             <h3>
               <a class="Proficional_Almoco" target="_blank" href="#services">
                 <!-- SEXTA -->
-                31/03
+                07/04
               </a>
             </h3>
             <p>
@@ -432,10 +436,10 @@
               <li> PÃO MASSA FINA </li>
               <li> CAFÉ / LEITE </li>
               <!-- <li> BANANA COZIDA </li> -->
-              <li> BOLO </li>
+              <!-- <li> BOLO </li> -->
               <!-- <li> FRUTA </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
-              <!-- <li> MOLHO DE SALSICHA </li> -->
+              <li> MOLHO DE SALSICHA </li>
               <!-- <li> OVO COZIDO </li> -->
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> PATÊ </li> -->
@@ -458,8 +462,8 @@
               <!-- <li> CARNE AO MOLHO </li> -->
               <!-- <li> CARNE ASADA </li> -->
               <!-- <li> CALABRESA E OVO </li> -->
-              <!-- <li> COSTELA AO MOLHO </li> -->
-              <li> COSTELA ASSADA </li>
+              <li> COSTELA AO MOLHO PEIXE</li>
+              <!-- <li> COSTELA ASSADA </li> -->
               <!-- <li> CHURRASCO </li> -->
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
@@ -478,7 +482,7 @@
               <!-- <li> ISCA DE CARNE COM FRITAS</li> -->
               <!-- <li> ISCA DE FIGADO </li> -->
               <!-- <li> ISCA DE FRANGO </li> -->
-              <li> LASANHA </li>
+              <!-- <li> LASANHA </li> -->
               <!-- <li> LASANHA DE CARNE </li> -->
               <!-- <li> MACARRONADA DE CAMARÃO </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
@@ -521,7 +525,7 @@
             <h3>
               <a class="Proficional_Almoco" target="_blank" href="#services">
                 <!-- SÁBADO -->
-                01/04
+                08/04
               </a>
             </h3>
             <p>
@@ -558,7 +562,7 @@
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
               <!-- <li> FAROFA DE CONSERVA </li> -->
               <!-- <li> FEIJOADA </li> -->
-              <!-- <li> FILE DE FRANGO FRITO </li> -->
+              <li> FILE DE FRANGO FRITO </li>
               <!-- <li> FILE DE FRANGO AO MOLHO </li> -->
               <!-- <li> FRANGO A MILANESA </li> -->
               <!-- <li> FRANGO ASSADO </li> -->
@@ -569,14 +573,14 @@
               <!-- <li> ISCA DE CALABRESA </li> -->
               <!-- <li> ISCA DE CARNE </li> -->
               <!-- <li> ISCA DE FIGADO </li> -->
-              <li> ISCA DE FRANGO </li>
+              <!-- <li> ISCA DE FRANGO </li> -->
               <!-- <li> LASANHA DE CARNE </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> PANQUECAS </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> PEIXE FRITO </li> -->
-              <!-- <li> PICADINHO RICO </li> -->
+              <li> PICADINHO RICO </li>
               <!-- <li> PEITO DE FRANCO </li> -->
               <!-- <li> REFRIGERANTE </li> -->
               <!-- <li> TAMBAQUI FRITO </li> -->
@@ -589,11 +593,11 @@
             <P class="desjejum">LANCHE:</P>
             <ul>
               <!-- <li> ABACATADA COM BOLACHA </li> -->
-              <li> BAQUETE </li>
+              <!-- <li> BAQUETE </li> -->
               <!-- <li> BISCOITO </li> -->
               <!-- <li> BISCOITO RECHEADO </li> -->
               <!-- <li> BOLACHA / IOGURTE </li> -->
-              <!-- <li> BOLO </li> -->
+              <li> BOLO </li>
               <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> KIKÃO </li> -->
               <!-- <li> MISTO QUENTE </li> -->
@@ -615,7 +619,7 @@
             <h3>
               <a class="Proficional_Almoco" target="_blank" href="#services">
                 <!-- DOMINGO -->
-                02/04
+                09/04
               </a>
             </h3>
             <p>
@@ -629,13 +633,13 @@
               <!-- <li> FRUTA </li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> OVO COZIDO </li> -->
-              <!-- <li> OVO FRITO </li> -->
+              <li> OVO FRITO </li>
               <!-- <li> PATÊ </li> -->
               <!-- <li> PUPUNHA </li> -->
               <!-- <li> QUARENTÃO </li> -->
               <!-- <li> QUEIJO E PRESUNTO </li> -->
               <!-- <li> QUEIJO </li> -->
-              <li> SALSICHA COM MOLHO </li>
+              <!-- <li> SALSICHA COM MOLHO </li> -->
               <!-- <li> SOPA DE FEIJÃO </li> -->
               <!-- <li> TAPIOCA COM QUEIJO </li> -->
             </ul>
@@ -646,7 +650,7 @@
               <!-- <li> ALMOÇO ESPECIAL </li> -->
               <!-- <li> BIFE ACEBOLADO </li> -->
               <!-- <li> BIFE AO MOLHO </li> -->
-              <li> CARNE AO MOLHO </li>
+              <!-- <li> CARNE AO MOLHO </li> -->
               <!-- <li> CALABRESA E OVO </li> -->
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> ESCONDIDINHO DE FRIOS </li> -->
@@ -666,7 +670,8 @@
               <!-- <li> ISCA DE FRANGO </li> -->
               <!-- <li> LASANHA DE CARNE </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
-              <li> OVO FRITO </li>
+              <!-- <li> OVO FRITO </li> -->
+              <li> OMELETE </li>
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> PEIXE FRITO </li> -->
               <!-- <li> PICADINHO RICO </li> -->
@@ -684,10 +689,10 @@
               <!-- <li> BISCOITO </li> -->
               <!-- <li> BISCOITO RECHEADO </li> -->
               <!-- <li> BOLACHA / IOGURTE </li> -->
-              <li> BOLO </li>
+              <!-- <li> BOLO </li> -->
               <!-- <li> FAROFA DE CHARQUE </li> -->
               <!-- <li> KIKÃO </li> -->
-              <!-- <li> MISTO QUENTE </li> -->
+              <li> MISTO QUENTE </li>
               <!-- <li> PÃO COM OVO E QUEIJO </li> -->
               <!-- <li> PÃO COM QUEIJO, PRESUNTO E OVO </li> -->
               <!-- <li> PASTEL </li> -->
